--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 2px;
+}
+
+.title {
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 .statsContainer {
@@ -41,6 +47,26 @@
 }
 
 .statsNumber {
+    margin-left: 5px;
+    color: #535bf2;
+}
+
+.statsLevel {
+    margin-left: 5px;
+    font-weight: bold;
+}
+
+.statsLevelNumber {
+    margin-left: 5px;
+    color: #535bf2;
+}
+
+.statsScore {
+    margin-left: 5px;
+    font-weight: bold;
+}
+
+.statsScoreNumber {
     margin-left: 5px;
     color: #535bf2;
 }
