--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,6 @@
-.isValuable {
-    color: green;
-}
-
-.isNotValuable {
-    color: red;
-}
-
-.isMostValuable {
-    color: gold;
+.draggable-area {
+    -webkit-app-region: drag;
+    width: 100%;
+    height: 100%;
+    @apply min-h-[350px] min-w-[450px];
 }
